Prevent main-content from breaking and overflowing

--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ input[type ="search"] {
 .main-content {
     display: grid;
     grid-template-columns: 5fr 1fr;
+    grid-auto-rows: 1fr;
     gap: 20px;
     padding: 30px;
     background-color: rgb(218, 213, 213);
@@ -149,6 +150,11 @@ h3 {
 
 .notifications {
     display: grid;
+    gap: 20px;
     grid-template-rows: auto 1fr auto 1fr;
+    border: 2px solid green;
+}
+
+.notifications p {
     border: 2px solid green;
 }
